2004-06-09  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-gpg-context.c (gpg_verify): Don't assign trust to be
	UNKNOWN if gpg sent us a NODATA status.

2004-06-07  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap4/camel-imap4-folder.c (camel_imap4_folder_new):
	Load the entire summary, not just the summary header. This way
	when the user opens the folder, we don't do a complete re-sync
	with the server unnecessarily.

	* providers/imap4/camel-imap4-summary.c (untagged_fetch_all): New
	info's always have a uid of "", so don't checkagainst NULL.

2004-06-06  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap4/camel-imap4-store.c (imap4_rename_folder):
	Implemented, mostly. Still need to update state on the renamed
	folder object if instantiated and rename the on-disk cache
	directory.

	* providers/imap4/camel-imap4-folder.c
	(camel_imap4_folder_finalize): Free the cachedir.
	(camel_imap4_folder_new): Init the cachedir and load the saved
	summary before updating it against the server summary.

	* providers/imap4/camel-imap4-store.c
	(camel_imap4_store_finalize): Free the storage_path.
	(imap4_construct): Init the storage_path.

2004-06-04  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap4/camel-imap4-folder.c (camel_imap4_folder_new):
	Initialise the folder->summary and force an update of the message
	info cache by selecting the folder and flushing the updates to the
	imap4 summary object.

	* providers/imap4/camel-imap4-store.c (imap4_get_folder_info):
	Lock the connect_lock before we check if the engine is NULL and
	after we connect (assuming we need to), initialise the engine
	pointer again.
	(imap4_get_folder_info): Doh. Need to escape the "'s in the LIST
	command string.
	(imap4_get_folder): Same.

	* camel-stream-buffer.c (stream_flush): Fixed to work
	properly. After we've flushed the buffer, we want to set sbf->ptr
	to sbf->buf, we don't want to do sbf->ptr += written, that'll just
	corrupt our next write.
